--- a/src/main/webapp/scripts/app/entities/space/space-detail.html
+++ b/src/main/webapp/scripts/app/entities/space/space-detail.html
@@ -1,4 +1,8 @@
-
+<style>
+    html{
+        overflow-y: scroll;
+    }
+</style>
 <md-toolbar md-scroll-shrink ng-if="true" class="cover" style="background-image: url(uploads/{{imageSpace[0].image}}); background-position: center">
         <md-button class="md-icon-button" aria-label="Settings">
             <i class="material-icons" onclick="window.history.back()">keyboard_backspace</i>
