--- a/src/main/webapp/scripts/app/entities/space/spaces.html
+++ b/src/main/webapp/scripts/app/entities/space/spaces.html
@@ -74,7 +74,7 @@
             <div class="material" style="padding: 0px;">
                 <div ng-cloak>
                     <md-content>
-                        <md-tabs md-dynamic-height md-border-bottom>
+                        <md-tabs md-dynamic-height md-border-bottom md-stretch-tabs="always">
                             <md-tab label="Tus reviews">
                                 <md-content class="md-padding">
                                     <div ng-repeat="review in reviews">
