--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -65,7 +65,7 @@
                         </div>
                         <div class="row">
                             <md-button ng-click="sendFilters(firstPrice, lastPrice, numPers, ids, address)">Enviar</md-button>
-                            <md-button style="float: right">Clear All</md-button>
+                            <md-button style="float: right" ng-click="clear()">Clear All</md-button>
                         </div>
                         </form>
                     </div>
