--- a/src/main/webapp/scripts/app/account/login/login.html
+++ b/src/main/webapp/scripts/app/account/login/login.html
@@ -1,38 +1,154 @@
-<div>
-    <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-            <h1 translate="login.title">Sign in</h1>
-
-            <div class="alert alert-danger" ng-show="authenticationError" translate="login.messages.error.authentication">
-                <strong>Failed to sign in!</strong> Please check your credentials and try again.
-            </div>
+<div class="container-fluid">
+    <div class="row cover-landing">
+        <div class="photo-overlay-background"></div>
+        <div class="col-sm-6 col-sm-offset-3" style="margin-top: 200px;">
+            <section layout="row" layout="column" layout-align="center center" layout-wrap="">
+                <md-button class="md-raised" flex="49" style="height: 48px;" data-toggle="modal" data-target="#myModal">Login</md-button>
+                <md-button class="md-raised md-primary" flex="49" style="height: 48px;">Registrate</md-button>
+            </section>
         </div>
-        <div class="col-md-4 col-md-offset-4">
-            <form class="form" role="form" ng-submit="login($event)">
-                <div class="form-group">
-                    <label for="username" translate="global.form.username">Login</label>
-                    <input type="text" class="form-control" id="username" placeholder="{{'global.form.username.placeholder' | translate}}" ng-model="username">
+    </div>
+    <div class="row">
+        <md-toolbar class="md-hue-2">
+            <div class="md-toolbar-tools" style="background: #E91E63 !important;">
+                <span flex-gt-sm="25" flex="5" ></span>
+                <div class="header-search" flex="100">
+                    <input class="header-search-input place" type="text" placeholder="Busca por localidad, pais, calle...">
+                    <i class="material-icons">search</i>
                 </div>
-                <div class="form-group">
-                    <label for="password" translate="login.form.password">Password</label>
-                    <input type="password" class="form-control" id="password" placeholder="{{'login.form.password.placeholder' | translate}}"
-                           ng-model="password">
+                <div flex>
+                    <md-button class="md-raised" aria-label="Learn More">
+                        Enviar
+                    </md-button>
                 </div>
-                <div class="form-group">
-                    <label for="rememberMe">
-                        <input type="checkbox" id="rememberMe" ng-model="rememberMe" checked>
-                        <span translate="login.form.rememberme">Remember me</span>
-                    </label>
-                </div>
-                <button type="submit" class="btn btn-primary" translate="login.form.button">Sign in</button>
-            </form>
-            <p></p>
-            <div class="alert alert-warning">
-                <a class="alert-link" href="#/reset/request" translate="login.password.forgot">Did you forget your password?</a>
             </div>
-            <div class="alert alert-warning" translate="global.messages.info.register">
-                You don't have an account yet? <a class="alert-link" href="#/register">Register a new account</a>
-            </div>
+        </md-toolbar>
+    </div>
+    <div class="container-fluid">
+        <div class="row row-centered">
+            <div class="col-md-3 col-centered col-md-push-0 col-sm-8 col-sm-10"><div class="item">
+                <i class="material-icons">search</i>
+                <h4>Title 1</h4>
+                <p>
+                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
+                </p>
+            </div></div>
+            <div class="col-md-3 col-centered col-md-push-0 col-sm-8 col-sm-10"><div class="item">
+                <i class="material-icons">search</i>
+                <h4>Title 2</h4>
+                <p>
+                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
+                </p>
+            </div></div>
+            <div class="col-md-3 col-centered col-md-push-0 col-sm-8 col-sm-10"><div class="item">
+                <i class="material-icons">search</i>
+                <h4>Title 3</h4>
+                <p>
+                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
+                </p>
+            </div></div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+                <div ng-cloak>
+                    <md-content class="tab-content">
+                        <md-tabs md-dynamic-height md-border-bottom md-stretch-tabs="always" class="mat-tabs">
+                            <md-tab label="one">
+                                <md-content class="md-padding" layout-xs="column" layout="row">
+                                    <div class="row">
+                                        <md-card class="col-md-6" ng-repeat="space in spaces">
+                                            <img ng-src="http://placehold.it/350x150" class="md-card-image" alt="Washed Out">
+                                            <md-card-title>
+                                                <md-card-title-text>
+                                                    <span class="md-headline">{{space.name}}</span>
+                                                </md-card-title-text>
+                                            </md-card-title>
+                                            <md-card-content>
+                                                <p>
+                                                    {{space.description}}
+                                                </p>
+                                            </md-card-content>
+                                            <md-card-actions layout="row" layout-align="end center">
+                                                <md-button>Action 1</md-button>
+                                                <md-button>Action 2</md-button>
+                                            </md-card-actions>
+                                        </md-card>
+                                    </div>
+                                </md-content>
+                            </md-tab>
+                            <md-tab label="two">
+                                <md-content class="md-padding tab-content">
+                                    <h1 class="md-display-2">Tab Two</h1>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi. Aliquam erat volutpat. Nam placerat, tortor in ultrices porttitor, orci enim rutrum enim, vel tempor sapien arcu a tellus. Vivamus convallis sodales ante varius gravida. Curabitur a purus vel augue ultrices ultricies id a nisl. Nullam malesuada consequat diam, a facilisis tortor volutpat et. Sed urna dolor, aliquet vitae posuere vulputate, euismod ac lorem. Sed felis risus, pulvinar at interdum quis, vehicula sed odio. Phasellus in enim venenatis, iaculis tortor eu, bibendum ante. Donec ac tellus dictum neque volutpat blandit. Praesent efficitur faucibus risus, ac auctor purus porttitor vitae. Phasellus ornare dui nec orci posuere, nec luctus mauris semper.</p>
+                                    <p>Morbi viverra, ante vel aliquet tincidunt, leo dolor pharetra quam, at semper massa orci nec magna. Donec posuere nec sapien sed laoreet. Etiam cursus nunc in condimentum facilisis. Etiam in tempor tortor. Vivamus faucibus egestas enim, at convallis diam pulvinar vel. Cras ac orci eget nisi maximus cursus. Nunc urna libero, viverra sit amet nisl at, hendrerit tempor turpis. Maecenas facilisis convallis mi vel tempor. Nullam vitae nunc leo. Cras sed nisl consectetur, rhoncus sapien sit amet, tempus sapien.</p>
+                                    <p>Integer turpis erat, porttitor vitae mi faucibus, laoreet interdum tellus. Curabitur posuere molestie dictum. Morbi eget congue risus, quis rhoncus quam. Suspendisse vitae hendrerit erat, at posuere mi. Cras eu fermentum nunc. Sed id ante eu orci commodo volutpat non ac est. Praesent ligula diam, congue eu enim scelerisque, finibus commodo lectus.</p>
+                                </md-content>
+                            </md-tab>
+                        </md-tabs>
+                    </md-content>
+                </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <md-toolbar>
+                <div class="md-toolbar-tools">
+                    <h2 translate="login.title">Sign in</h2>
+                    <span flex></span>
+                    <md-button class="md-icon-button" data-dismiss="modal" aria-label="Close">
+                        <i class="material-icons">close</i>
+                    </md-button>
+                </div>
+            </md-toolbar>
+            <md-dialog-content>
+                <div class="md-dialog-content">
+                    <div class="row">
+                        <div class="col-md-4 col-md-offset-4">
+
+                            <div class="alert alert-danger" ng-show="authenticationError" translate="login.messages.error.authentication">
+                                <strong>Failed to sign in!</strong> Please check your credentials and try again.
+                            </div>
+                        </div>
+                        <div class="col-xs-10 col-xs-push-1" style="margin-top: 40px;">
+                            <form role="form" ng-submit="login($event)">
+                                <md-input-container flex-gt-sm class="md-icon-float md-block md-has-icon">
+                                    <label translate="global.form.username">Login</label>
+                                    <i style="color: black; position: absolute; top: 5px; left: 2px; right: auto; color: rgba(0,0,0,0.38);" class="material-icons">person</i>
+                                    <input style="-webkit-box-shadow: 0 0 0px 1000px white inset !Important;" type="text" ng-model="username" id="username">
+                                </md-input-container>
+                                <md-input-container flex-gt-sm class="md-icon-float md-block md-has-icon">
+                                    <label for="password" translate="login.form.password">Password</label>
+                                    <i style="color: black; position: absolute; top: 5px; left: 2px; right: auto; color: rgba(0,0,0,0.38);" class="material-icons">lock</i>
+                                    <input style="-webkit-box-shadow: 0 0 0px 1000px white inset !Important;" type="password" id="password"
+                                           ng-model="password">
+                                </md-input-container>
+                                <div class="form-group">
+                                    <label for="rememberMe">
+                                        <md-checkbox id="rememberMe" ng-model="rememberMe" checked>
+                                            <span translate="login.form.rememberme">Remember me</span>
+                                        </md-checkbox>
+                                    </label>
+                                </div>
+                                <div layout="row">
+                                    <md-button class="md-raised md-primary" type="submit" translate="login.form.button" flex style="height: 50px;">Sign in</md-button>
+                                </div>
+                            </form>
+                            <p></p>
+                            <div class="alert" style="text-align: center; padding: 0;">
+                                <a class="alert-link" href="#/reset/request" translate="login.password.forgot">Did you forget your password?</a>
+                            </div>
+                            <div class="alert" translate="global.messages.info.register" style="text-align: center">
+                                You don't have an account yet? <a class="alert-link" href="#/register">Register a new account</a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </md-dialog-content>
         </div>
     </div>
 </div>
