--- a/src/main/webapp/scripts/app/entities/favorite/favorites.html
+++ b/src/main/webapp/scripts/app/entities/favorite/favorites.html
@@ -5,7 +5,8 @@
         <h4>
         Favoritos: {{filtered.length}}</h4>
         <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-4"  ng-repeat="favorite in  filtered = (favorites | filter:filterExpr)">
-            <md-card>
+            <a ui-sref="space.detail({id:favorite.space.id})" class="no-link">
+                <md-card>
                 <md-card-header>
                     <md-card-avatar>
                         <img ng-src="profile/{{favorite.space.user.login}}.jpg"/>
@@ -27,6 +28,7 @@
                     </p>
                 </md-card-content>
             </md-card>
+            </a>
         </div>
     </div>
 </div>
