--- a/src/main/webapp/scripts/app/entities/review/review-dialog.html
+++ b/src/main/webapp/scripts/app/entities/review/review-dialog.html
@@ -4,47 +4,32 @@
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                 ng-click="clear()">&times;</button>
-        <h4 class="modal-title" id="myReviewLabel" translate="project1App.review.home.createOrEditLabel">Create or edit a Review</h4>
+        <h4 class="modal-title" id="myReviewLabel">Edita te Review</h4>
     </div>
     <div class="modal-body">
         <jh-alert-error></jh-alert-error>
         <div class="form-group">
-            <label for="id" translate="global.field.id">ID</label>
-            <input type="text" class="form-control" id="id" name="id"
-                    ng-model="review.id" readonly />
+            <md-input-container class="md-block">
+                <label>Text</label>
+                <textarea name="text" id="field_text"
+                          ng-model="review.text" md-maxlength="150" md-minlength="5" rows="5" md-select-on-focus></textarea>
+            </md-input-container>
         </div>
         <div class="form-group">
-            <label class="control-label" translate="project1App.review.text" for="field_text">Text</label>
-            <input type="text" class="form-control" name="text" id="field_text"
-                    ng-model="review.text"
-                     />
-        </div>
-        <div class="form-group">
-            <label class="control-label" translate="project1App.review.time" for="field_time">Time</label>
-            <input type="datetime-local" class="form-control" name="time" id="field_time"
-                    ng-model="review.time"
-                     />
+            <md-input-container class="md-block" flex-gt-sm>
+                <label>Time</label>
+                <input type="datetime-local" name="time"
+                       ng-model="review.time" disabled/>
+            </md-input-container>
         </div>
 
-        <div class="form-group">
-            <label translate="project1App.review.space" for="field_space">space</label>
-            <select class="form-control" id="field_space" name="space" ng-model="review.space" ng-options="space as space.name for space in spaces track by space.id">
-                <option value=""></option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label translate="project1App.review.user" for="field_user">user</label>
-            <select class="form-control" id="field_user" name="user" ng-model="review.user" ng-options="user as user.email for user in users track by user.id">
-                <option value=""></option>
-            </select>
-        </div>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="clear()">
+        <md-button type="button" data-dismiss="modal" ng-click="clear()">
             <span class="glyphicon glyphicon-ban-circle"></span>&nbsp;<span translate="entity.action.cancel">Cancel</span>
-        </button>
-        <button type="submit" ng-disabled="editForm.$invalid || isSaving" class="btn btn-primary">
+        </md-button>
+        <md-button type="submit" ng-disabled="editForm.$invalid || isSaving">
             <span class="glyphicon glyphicon-save"></span>&nbsp;<span translate="entity.action.save">Save</span>
-        </button>
+        </md-button>
     </div>
 </form>
